feat: add verbose output mode to CometSqlFileTestSuite